--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
 @import url("https://unpkg.com/leaflet@1.9.4/dist/leaflet.css");
 
+.mt-1 {
+  margin-top: 5px;
+}
+.mt-2 {
+  margin-top: 8px;
+}
+
 .header {
   display: flex;
   justify-content: center;
